--- a/telegraf/package.json
+++ b/telegraf/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@rollup/plugin-terser": "^0.4.3",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
